[package]
name = "slabs"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_18"] }
gtk4-layer-shell = "0.5.0"
relm4 = "0.9.1"
relm4-macros = "0.9.1"
zbus = "5.7.1"
# backlight_control_rs = "1.0.0"
# env_logger = "0.11.6"
# tracker = "0.2.2"
# toml = "0.8.20"
